--- a/crim.html
+++ b/crim.html
@@ -69,6 +69,6 @@
   }
  
 </script>
- <center> <button> <a href ="enroll.html"> MAIN </a> </center>
+ <center> <button> <a href ="index.html"> MAIN </a> </center>
 
 </html>
