--- a/coms.html
+++ b/coms.html
@@ -68,6 +68,6 @@
     alert("YOU ARE NOW ENROLLED IN COMSCIE COURSE"); //
   }
 </script>
- <center> <button> <a href ="enroll.html"> MAIN </a> </center>
+ <center> <button> <a href ="index.html"> MAIN </a> </center>
 
 </html>
