--- a/bsit.html
+++ b/bsit.html
@@ -64,7 +64,7 @@
     alert("YOU ARE NOW ENROLLED IN BSIT COURSE"); 
   }
 </script>
- <center> <button> <a href ="enroll.html"> MAIN </a> </center>
+ <center> <button> <a href ="index.html"> MAIN </a> </center>
 
 
 </html>
