--- a/act.html
+++ b/act.html
@@ -68,6 +68,6 @@
     alert("YOU ARE NOW ENROLLED IN ACT COURSE"); //
   }
 </script>
- <center> <button> <a href ="indwx.html"> MAIN </a> </center>
+ <center> <button> <a href ="index.html"> MAIN </a> </center>
 
 </html>
